--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-fastapi==0.112.2
-uvicorn==0.30.5
+fastapi>=0.115
+uvicorn>=0.30
+pydantic[email]>=2.9
+python-jose[cryptography]>=3.3
+passlib[argon2]>=1.7
+sqlalchemy>=2.0
+pytest>=8.3
+httpx>=0.27
+anyio>=4.4
