--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ pydantic[email]>=2.9
 python-jose[cryptography]>=3.3
 passlib[argon2]>=1.7
 sqlalchemy>=2.0
-pytest>=8.2.2
+pytest==8.2.2
 httpx>=0.27
 anyio>=4.4
