--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-fastapi==0.112.2
-uvicorn==0.30.5
+fastapi>=0.112.2
+uvicorn>=0.30.5
+python-jose[cryptography]>=3.3.0
 passlib[argon2]>=1.7
+pytest==8.2.2
+httpx>=0.27.0
+pydantic[email]>=2.9.0
+anyio>=4.4.0
