--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,18 @@
-name: CI
-on:
-  pull_request:
-  push:
-    branches: [main]
-permissions:
-  contents: read
-concurrency:
-  group: ci-${{ github.ref }}
-  cancel-in-progress: true
-
+name: ci
+on: [push, pull_request]
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "pip"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt -r requirements-dev.txt
-
-      - name: Lint & Format
-        run: |
-          ruff check --output-format=github .
-          black --check .
-          isort --check-only .
-
-      - name: Tests
-        run: pytest -q
-
-      - name: Pre-commit (all files)
-        run: pre-commit run --all-files
+test:
+runs-on: ubuntu-latest
+steps:
+- uses: actions/checkout@v4
+- uses: actions/setup-python@v5
+with:
+python-version: '3.12'
+- name: Install deps
+run: |
+python -m pip install --upgrade pip
+pip install -e .
+pip install pytest httpx
+- name: Lint & Test
+run: |
+python -m pytest -q
