--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,21 @@
 name: ci
 on: [push, pull_request]
+
 jobs:
-test:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v4
-- uses: actions/setup-python@v5
-with:
-python-version: '3.12'
-- name: Install deps
-run: |
-python -m pip install --upgrade pip
-pip install -e .
-pip install pytest httpx
-- name: Lint & Test
-run: |
-python -m pytest -q
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .
+          pip install pytest httpx
+      - name: Run tests
+        env:
+          PYTHONPATH: src
+          JWT_SECRET: test_secret_for_ci
+        run: pytest -q
