--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
   "fastapi>=0.115",
   "uvicorn[standard]>=0.30",
-  "pydantic>=2.7",
+  "pydantic[email]>=2.7",
   "SQLAlchemy>=2.0",
   "python-multipart>=0.0.9",
   "passlib[bcrypt]>=1.7",
