--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,13 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-          pip install pytest httpx
+          pip install pytest httpx "pydantic[email]" email-validator
+
       - name: Run tests
         env:
           PYTHONPATH: src
