P07: containerization and basic hardening

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,17 @@
 .git
 .gitignore
-.gitattributes
-__pycache__/
+__pycache__
 *.pyc
 *.pyo
 *.pyd
 *.sqlite
 *.db
-.venv/
-dist/
-build/
-.pytest_cache/
-.coverage
-htmlcov/
-node_modules/
+*.log
 .env
+.venv
+.mypy_cache
+.pytest_cache
+.idea
+.vscode
+dist
+build
