P06: add logging middleware + quality gate CI + formatting fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,7 @@ profile = "black"
 
 [tool.ruff]
 line-length = 100
-select = ["E","F","I","B","UP","S","SIM","PL","RUF"]
-ignore = ["S105","S106","S107"]
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
