P07: container hardening and CI scanning

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,13 @@
 .git
 .gitignore
 __pycache__
-*.pyc
+*.py[cod]
 *.pyo
 *.pyd
-*.sqlite
-*.db
 *.log
 .env
-.venv
-.mypy_cache
-.pytest_cache
-.idea
+app.db
+tests
+.github
 .vscode
-dist
-build
+.idea
