--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,18 @@
-[build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "studynotes"
-version = "0.1.0"
-description = "Study Notes MVP (FastAPI)"
-requires-python = ">=3.12"
-dependencies = [
-  "fastapi>=0.115",
-  "uvicorn[standard]>=0.30",
-  "pydantic[email]>=2.7",
-  "SQLAlchemy>=2.0",
-  "python-multipart>=0.0.9",
-  "passlib[bcrypt]>=1.7",
-  "python-jose[cryptography]>=3.3",
-  "argon2-cffi>=23",
-]
-
-[tool.setuptools]
-package-dir = {"" = "src"}
-
-[tool.setuptools.packages.find]
-where = ["src"]
-
-[tool.black]
-line-length = 100
-
-[tool.isort]
-profile = "black"
-
 [tool.ruff]
 line-length = 100
-select = ["E","F","I","B","UP","S","SIM","PL","RUF"]
-ignore = ["S105","S106","S107"]
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "B", "I", "UP", "S", "PL", "RUF"]
+ignore = [
+  "PLR2004",
+  "PLR0913",
+  "B008",
+  "S101",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = [
+  "S101",
+  "PLR2004",
+]
