--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,13 @@ line-length = 100
 target-version = "py312"
 
 [tool.ruff.lint]
-select = ["E", "F", "B", "I", "UP", "S", "PL", "RUF"]
+select = ["E", "F", "I", "UP", "B", "PL", "S"]
 ignore = [
-  "PLR2004",
-  "PLR0913",
-  "B008",
   "S101",
+  "S105",
+  "B008",
+  "PLR0913",
+  "PLR2004",
 ]
 
 [tool.ruff.lint.per-file-ignores]
