--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           python-version: "3.12"
 
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -33,7 +34,10 @@ jobs:
             "python-jose[cryptography]>=3.3.0" \
             "pydantic[email]>=2.7.0" \
             pytest \
-            httpx
+            httpx \
+            ruff \
+            black \
+            isort
 
 
       - name: Run ruff (lint)
