CI: install bandit for security scan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,9 @@ jobs:
             httpx \
             ruff \
             black \
-            isort
+            isort \
+            bandit
+
 
 
       - name: Run ruff (lint)
